# Linea

./: .gitignore  CHANGELOG.md  COMPILER_README.md  CONTRIBUTING.md  Developer.md  Example.html  README.md  RELEASE_3_0_0.md  RELEASE_NOTES_V350.md  RELEASE_NOTES_V400.md  RELEASE_NOTES_V410.md  SECURITY.md  TRANSFORMATION_SUMMARY.md  VERSION.txt  arl.html  arrays_demo.ln  arrays_demo_compiled  bootload.py  compile_stderr.txt  comprehensive_compiled  comprehensive_test.ln  contact.html  csv_demo_compiled  database.py  demo  demo.ln  demo.rs  demo_data.xlsx  demo_graphics  download.html  ekernel.py  evaluator.py  examples.html  guide.html  index.html  install.sh  kernel.py  liblinea.py  linea  linea.py  (+47 more)
.github/: copilot-instructions.md
.github/workflows/: compiler-bench.yml  compiler-ci.yml
compiler/: Cargo.toml
compiler/linea-ast/: Cargo.toml
compiler/linea-ast/benches/: parser_bench.rs
compiler/linea-ast/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
compiler/linea-ast/tests/: parser_diagnostics.rs
compiler/linea-codegen/: Cargo.toml
compiler/linea-codegen/src/: lib.rs  linea_runtime.rs
compiler/linea-codegen/tests/: import_validation.rs
compiler/linea-core/: Cargo.toml
compiler/linea-core/src/: error.rs  lib.rs  types.rs  value.rs
compiler/linea-executor/: Cargo.toml
compiler/linea-executor/src/: compute.rs  lib.rs
compiler/src/: main.rs
compiler/tests/: cli_color_messages.rs
databases/: db.txt
docs/: LANGUAGE_SPEC.md  NEW_FEATURES_V350.md  README.md  arl.html  documentation-index.md  guide.html  index.html  tour.md  wiki-arrays-vectors.html  wiki-async.html  wiki-basics-literals.html  wiki-basics-types.html  wiki-basics-variables.html  wiki-blockchain-gpu-memory.html  wiki-common-patterns.html  wiki-control-conditionals.html  wiki-control-loops.html  wiki-control-match.html  wiki-db-fileio-lowlevel.html  wiki-errors.html  wiki-fun-uuid.html  wiki-functions-advanced.html  wiki-functions-basics.html  wiki-git-library.html  wiki-gpu-computation.html  wiki-gui-iced.html  wiki-hash-security.html  wiki-index.html  wiki-io-display.html  wiki-lambda-macros.html  wiki-language-spec.html  wiki-matrices-tensors.html  wiki-media-cv-camera.html  wiki-ml-basics.html  wiki-ml-inference.html  wiki-ml-layers.html  wiki-ml-model-formats.html  wiki-ml-training.html  wiki-modules.html  wiki-oops.html  (+15 more)
docs/ai/: overview.md
docs/stdlib/: reference.md
examples/: arl_reasoning_demo.ln  array_operations.ln  blockchain_gpu_memory_demo.ln  calculator.ln  compute_demo.ln  control_flow_dsa_demo.ln  csv_demo.ln  datasets_demo.ln  db_fileio_lowlevel_demo.ln  even_odd.ln  excel_demo.ln  factorial.ln  fibonacci.ln  fun_uuid_demo.ln  git_library_demo.ln  graphics_demo.ln  gui_iced_demo.ln  hash_security_demo.ln  hello.ln  http_demo.ln  import_validation_demo.ln  iris_demo.ln  iris_dummy.csv  lambda_macro_demo.ln  markdown_demo  markdown_demo.ln  media_cv_camera_demo.ln  ml_demo.ln  ml_model_formats_demo.ln  native_input_demo.ln  oops_easy_demo.ln  password_demo.ln  power_table.ln  prime_checker.ln  sql_secure_demo.ln  string_demo.ln  syntax_comparison.ln  system_ops_demo.ln  system_threads_demo.ln  temperature_converter.ln  (+7 more)
libs/: arl.ln  audio.ln  blockchain.ln  camera.ln  compute.ln  csv.ln  datasets.ln  db.ln  dsa.ln  excel.ln  fileio.ln  framework.ln  fun.ln  git.ln  gpu_tools.ln  graphics.ln  gui.ln  hash.ln  http.ln  image.ln  lowlevel.ln  markdown.ln  math.ln  memory.ln  ml.ln  opencv.ln  password.ln  security.ln  sql.ln  strings.ln  system.ln  utils.ln  uuid.ln  video.ln  webserver.ln
notes/: hello.txt
package-manager/: linea_pkg.py  package-template.xml
