[workspace]
members = [".", "linea-core", "linea-ast", "linea-codegen", "linea-executor"]
resolver = "2"

[package]
name = "linea-compiler"
version = "4.10.0"
edition = "2021"
authors = ["Gautham Nair"]

[dependencies]
linea-core = { path = "./linea-core" }
linea-ast = { path = "./linea-ast" }
linea-codegen = { path = "./linea-codegen" }
linea-executor = { path = "./linea-executor" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"

# CSV Processing
csv = "1.3"

# HTTP & Networking (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Markdown
comrak = "0.18"

# Excel
calamine = "0.24"
rust_xlsxwriter = "0.68"

# JSON Support
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Note: Graphics library (plotters) deferred - requires fontconfig system library
