[workspace]
members = [".", "linea-core", "linea-ast", "linea-codegen", "linea-executor"]
resolver = "2"

[workspace.dependencies]
indexmap = "=2.2.6"

[package]
name = "linea-compiler"
version = "4.14.3"
edition = "2021"
authors = ["Gautham Nair"]

[dependencies]
linea-core = { path = "./linea-core" }
linea-ast = { path = "./linea-ast" }
linea-codegen = { path = "./linea-codegen" }
linea-executor = { path = "./linea-executor" }
anyhow = "1"
thiserror = "1"

# CSV Processing
csv = "1.3"

# HTTP & Networking (pinned for broader stable toolchain compatibility)
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
url = "=2.4.1"

# Excel
calamine = "0.24"
rust_xlsxwriter = "0.68"

# JSON Support
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Note: Graphics library (plotters) deferred - requires fontconfig system library
